# shunt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/shunt_core/: Cargo.toml
crates/shunt_core/src/: config.rs  error.rs  lib.rs  storage.rs  types.rs
crates/shunt_email/: Cargo.toml
crates/shunt_email/src/: lib.rs  parser.rs  transport.rs
crates/shunt_sms/: Cargo.toml
crates/shunt_sms/src/: interceptor.rs  lib.rs  traits.rs
crates/shunt_web/: Cargo.toml
crates/shunt_web/frontend/: index.html
crates/shunt_web/src/: handlers.rs  lib.rs  server.rs  sse.rs
docs/architecture/decisions/: 001-workspace-structure.md  002-storage-backend.md  003-web-ui-approach.md  004-email-parsing-strategy.md  005-sms-trait-design.md
docs/ddd/: bounded-contexts.md  domain-model.md  ubiquitous-language.md
docs/sparc/: deployment-considerations.md  maintenance-extensibility.md  technical-implementation.md  testing-strategy.md
sample_app/: Cargo.toml
sample_app/src/: factories.rs  lib.rs  notifications.rs
sample_app/tests/: integration_test.rs
shunt/: Cargo.toml
shunt/src/: lib.rs
