[workspace]
resolver = "2"
members = [
    "crates/shunt_core",
    "crates/shunt_email",
    "crates/shunt_sms",
    "crates/shunt_web",
    "shunt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ikenna/shunt"
rust-version = "1.75"

[workspace.dependencies]
shunt_core = { path = "crates/shunt_core", version = "0.1.0" }
shunt_email = { path = "crates/shunt_email", version = "0.1.0" }
shunt_sms = { path = "crates/shunt_sms", version = "0.1.0" }
shunt_web = { path = "crates/shunt_web", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"
