[package]
name = "shunt_sample_app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shunt_core = { path = "../crates/shunt_core" }
shunt_email = { path = "../crates/shunt_email" }
shunt_sms = { path = "../crates/shunt_sms" }
shunt_web = { path = "../crates/shunt_web" }
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
fabricate = { version = "0.1", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tempfile = "3"
