[package]
name = "shunt_email"
description = "Email interception for the shunt message preview library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shunt_core = { workspace = true }
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1"] }
mail-parser = "0.9"
open = "5"
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
