[package]
name = "shunt_web"
description = "Web preview server for the shunt message preview library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shunt_core = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
rust-embed = "8"
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
async-stream = "0.3"
